--- a/src/main/resources/fxml/AppVue.fxml
+++ b/src/main/resources/fxml/AppVue.fxml
@@ -12,9 +12,14 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane fx:id="root" prefHeight="400.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="passwordManager.controleur.AppControleur">
@@ -27,14 +32,19 @@
                   <items>
                         <MenuItem mnemonicParsing="false" onAction="#nouvelleSauvegarde" text="Nouveau" />
                         <MenuItem mnemonicParsing="false" onAction="#chargerDialog" text="Ouvrir" />
-                        <MenuItem mnemonicParsing="false" onAction="#sauvegarderDialog" text="Sauvegarder" />
+                        <MenuItem mnemonicParsing="false" onAction="#sauvegarderSc" text="Sauvegarder" />
+                        <MenuItem mnemonicParsing="false" onAction="#sauvegarderDialog" text="Sauvegarder vers..." />
+                        <MenuItem mnemonicParsing="false" text="Autoriser" />
+                        <MenuItem mnemonicParsing="false" onAction="#modifierFichierInfo" text="Informations" />
                     <MenuItem mnemonicParsing="false" onAction="#exit" text="Quitter" />
                   </items>
                 </Menu>
                 <Menu mnemonicParsing="false" text="Edition">
                   <items>
                         <MenuItem mnemonicParsing="false" text="Ajouter..." />
+                        <MenuItem mnemonicParsing="false" text="Modifier" />
                     <MenuItem mnemonicParsing="false" text="Supprimer" />
+                        <MenuItem mnemonicParsing="false" text="Paramètres" />
                   </items>
                 </Menu>
                 <Menu mnemonicParsing="false" text="Aide">
@@ -51,7 +61,12 @@
               <items>
                   <BorderPane prefHeight="373.0" prefWidth="105.0">
                      <top>
-                        <TextField fx:id="filter" promptText="Rechercher..." BorderPane.alignment="CENTER" />
+                        <HBox BorderPane.alignment="CENTER">
+                           <children>
+                              <TextField fx:id="filter" promptText="Rechercher..." styleClass="filtreTF" HBox.hgrow="ALWAYS" />
+                              <Button fx:id="bEcraserFiltre" mnemonicParsing="false" onAction="#ecraserFiltre" styleClass="boutonMod" text="A" />
+                           </children>
+                        </HBox>
                      </top>
                      <center>
                         <ScrollPane fx:id="sp" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
@@ -61,51 +76,84 @@
                         </ScrollPane>
                      </center>
                      <bottom>
-                        <HBox alignment="CENTER" spacing="10.0" BorderPane.alignment="CENTER">
+                        <HBox alignment="CENTER" BorderPane.alignment="CENTER">
                            <BorderPane.margin>
-                              <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+                              <Insets />
                            </BorderPane.margin>
                            <children>
-                              <Button fx:id="bAjoutDomaine" mnemonicParsing="false" onAction="#ajoutDomaine" prefWidth="70.0" text="Ajouter" />
-                              <Button fx:id="bModificationDomaine" mnemonicParsing="false" onAction="#editDomaine" prefWidth="70.0" text="Modifier" />
-                              <Button fx:id="bSuppressionDomaine" mnemonicParsing="false" onAction="#supprimerDomaine" prefWidth="70.0" text="Supprimer" />
+                              <Button fx:id="bAjoutDomaine" mnemonicParsing="false" onAction="#ajoutDomaine" prefWidth="1000.0" styleClass="boutonMod" text="Ajouter" HBox.hgrow="ALWAYS" />
+                              <Button fx:id="bModificationDomaine" mnemonicParsing="false" onAction="#editDomaine" prefWidth="1000.0" styleClass="boutonMod" text="Modifier" HBox.hgrow="ALWAYS" />
+                              <Button fx:id="bSuppressionDomaine" mnemonicParsing="false" onAction="#supprimerDomaine" prefWidth="1000.0" styleClass="boutonMod" text="Supprimer" HBox.hgrow="ALWAYS" />
                            </children>
                         </HBox>
                      </bottom>
                   </BorderPane>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                <AnchorPane fx:id="detailsRoot" minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                      <children>
                         <BorderPane prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <top>
-                              <Label fx:id="detailsTitre" styleClass="titre" text="Titre" BorderPane.alignment="CENTER">
-                                 <font>
-                                    <Font size="14.0" />
-                                 </font>
-                              </Label>
+                              <BorderPane BorderPane.alignment="CENTER_LEFT">
+                                 <left>
+                                    <Label fx:id="detailsTitre" styleClass="titre" text="Titre" BorderPane.alignment="CENTER">
+                                       <font>
+                                          <Font size="14.0" />
+                                       </font>
+                                    </Label>
+                                 </left>
+                                 <right>
+                                    <ImageView fx:id="icone" fitHeight="56.0" fitWidth="56.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER" />
+                                 </right>
+                              </BorderPane>
                            </top>
                            <center>
-                              <TableView fx:id="detailsTable" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-                                <columns>
-                                  <TableColumn fx:id="detailsColumnNom" prefWidth="75.0" text="User" />
-                                  <TableColumn fx:id="detailsColumnMdp" prefWidth="75.0" text="Password" />
-                                </columns>
-                                 <columnResizePolicy>
-                                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                                 </columnResizePolicy>
-                              </TableView>
+                              <VBox BorderPane.alignment="CENTER">
+                                 <children>
+                                    <GridPane>
+                                      <columnConstraints>
+                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                      </columnConstraints>
+                                      <rowConstraints>
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                      </rowConstraints>
+                                       <children>
+                                          <Label text="Domaine" />
+                                          <Label text="Nombre de comptes" GridPane.rowIndex="1" />
+                                          <Label text="Notes" GridPane.rowIndex="2" />
+                                          <Label fx:id="domaineLabel" text="Bla" GridPane.columnIndex="1" />
+                                          <Label fx:id="nbComptesLabel" text="Bla" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                          <Label fx:id="notesLabel" text="Bla" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                       </children>
+                                    </GridPane>
+                                    <TableView fx:id="detailsTable" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="SOMETIMES">
+                                      <columns>
+                                        <TableColumn fx:id="detailsColumnNom" prefWidth="75.0" text="User" />
+                                        <TableColumn fx:id="detailsColumnMdp" prefWidth="75.0" text="Password" />
+                                      </columns>
+                                       <columnResizePolicy>
+                                          <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                       </columnResizePolicy>
+                                    </TableView>
+                                 </children>
+                              </VBox>
                            </center>
                            <bottom>
-                              <HBox alignment="TOP_CENTER" spacing="10.0" BorderPane.alignment="CENTER">
+                              <HBox alignment="TOP_CENTER" BorderPane.alignment="CENTER">
                                  <children>
-                                    <Button fx:id="bAjoutCompte" mnemonicParsing="false" onAction="#ajoutCompte" prefWidth="80.0" text="Ajouter" HBox.hgrow="ALWAYS" />
-                                    <Button fx:id="bModificationCompte" mnemonicParsing="false" onAction="#editCompte" prefWidth="80.0" text="Modifier" HBox.hgrow="ALWAYS" />
-                                    <Button fx:id="bSuppressionCompte" mnemonicParsing="false" onAction="#supprimerCompte" prefWidth="80.0" text="Supprimer" HBox.hgrow="ALWAYS" />
+                                    <Button fx:id="bAjoutCompte" mnemonicParsing="false" onAction="#ajoutCompte" prefWidth="1000.0" styleClass="boutonMod" text="Ajouter" HBox.hgrow="ALWAYS" />
+                                    <Button fx:id="bModificationCompte" mnemonicParsing="false" onAction="#editCompte" prefWidth="1000.0" styleClass="boutonMod" text="Modifier" HBox.hgrow="ALWAYS" />
+                                    <Button fx:id="bSuppressionCompte" mnemonicParsing="false" onAction="#supprimerCompte" prefWidth="1000.0" styleClass="boutonMod" text="Supprimer" HBox.hgrow="ALWAYS" />
                                  </children>
                                  <BorderPane.margin>
-                                    <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
+                                    <Insets />
                                  </BorderPane.margin>
                               </HBox>
                            </bottom>
+                           <padding>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </padding>
                         </BorderPane>
                      </children>
                   </AnchorPane>
