--- a/src/main/resources/fxml/FichierInfo.fxml
+++ b/src/main/resources/fxml/FichierInfo.fxml
@@ -24,7 +24,8 @@
          <bottom>
             <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
               <buttons>
-                <Button mnemonicParsing="false" onAction="#okEdition" text="Ok" />
+                <Button fx:id="ok" mnemonicParsing="false" onAction="#okEdition" text="Ok" />
+                  <Button mnemonicParsing="false" onAction="#annulerEdition" text="Annuler" />
               </buttons>
             </ButtonBar>
          </bottom>
