--- a/src/main/resources/fxml/App.fxml
+++ b/src/main/resources/fxml/App.fxml
@@ -157,8 +157,9 @@
                                                 <TableView fx:id="tvComptes" prefHeight="212.0" prefWidth="501.0" HBox.hgrow="ALWAYS">
                                                   <columns>
                                                       <TableColumn fx:id="tvComptesNumero" maxWidth="30.0" minWidth="30.0" prefWidth="30.0" text="#" />
-                                                    <TableColumn fx:id="tvComptesUtilisateur" prefWidth="280.0" text="User" />
-                                                    <TableColumn fx:id="tvComptesMotDePasse" prefWidth="75.0" text="Password" />
+                                                    <TableColumn fx:id="tvComptesUtilisateur" prefWidth="280.0" text="Utilisateur" />
+                                                    <TableColumn fx:id="tvComptesMotDePasse" prefWidth="75.0" text="Mot de passe" />
+                                                      <TableColumn fx:id="tvComptesDateCreation" prefWidth="75.0" text="Date de création" />
                                                   </columns>
                                                    <columnResizePolicy>
                                                       <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
